  skipping support for common use-cases. (Adrien Grand, Greg Miller)

* GITHUB#12156: TermInSetQuery now extends MultiTermQuery instead of providing its own custom implementation (which
  was essentially a clone of MultiTermQuery#CONSTANT_SCORE_REWRITE). It uses the new CONSTANT_SCORE_BLENDED_REWRITE
  by default, but can be overridden through the constructor. (Greg Miller)

Optimizations
---------------------

* GITHUB#11900: BloomFilteringPostingsFormat now uses multiple hash functions
  in order to achieve the same false positive probability with less memory.
  (Jean-François Boeuf)

* GITHUB#12118: Optimize FeatureQuery to TermQuery & weight when scoring is not required. (Ben Trent, Robert Muir)

* GITHUB#12128, GITHUB#12133: Speed up docvalues set query by making use of sortedness. (Robert Muir, Uwe Schindler)

* GITHUB#12050: Reuse HNSW graph for intialization during merge (Jack Mazanec)

* GITHUB#12155: Speed up DocValuesRewriteMethod by making use of sortedness. (Greg Miller)

* GITHUB#12139: Faster indexing of string fields. (Adrien Grand)

Bug Fixes
---------------------

* GITHUB#12158: KeywordField#newSetQuery should clone input BytesRef[] to avoid modifying provided array. (Greg Miller)

Build
---------------------

* GITHUB#12131: Generate gradle.properties from gradlew, if absent (Colvin Cowie, Uwe Schindler)

Other
---------------------

* GITHUB#11868: Add a FilterIndexInput and FilterIndexOutput class to more easily and safely create delegate
  IndexInput and IndexOutput classes (Marc D'Mello)

======================== Lucene 9.5.0 =======================

API Changes
---------------------
* GITHUB#11998: Add new stored fields and termvectors interfaces: IndexReader.storedFields()
  and IndexReader.termVectors(). Deprecate IndexReader.document() and IndexReader.getTermVector().
  The new APIs do not rely upon ThreadLocal storage for each index segment, which can greatly
  reduce RAM requirements when there are many threads and/or segments.